--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  October 2nd, 2023 - This is so exciting. We have just had some of our best litters yet! We have boys and girls avaiable. We usually wait to post photos but the little newborn lilac and tans are sooo adorable.</p>
+            <p class="lead">  October 14th, 2023 - This is so exciting. We have just had some of our best litters yet! We have boys and girls avaiable.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -109,21 +109,7 @@
                 <h3>SOLD, Dallas, TX</h3> -->
             </div>
 
-            <div class="card puppy">
-                <h1>fawn with chocolate points, boy </h1>
-                <img src="images/puppies/sept/sept-24.jpg" alt="blue frenchie puppy">
-                <img src="images/puppies/sept/sept-25.jpg" alt="blue frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX</h3> -->
-            </div>
-
-            <div class="card puppy">
-                <h1>fawn with chocolate points, girl </h1>
-                <img src="images/puppies/sept/sept-26.jpg" alt="blue frenchie puppy">
-                <img src="images/puppies/sept/sept-27.jpg" alt="blue frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX</h3> -->
-            </div>
+            
 
 
             <!-- <div class="card puppy">
