--- a/puppies.html
+++ b/puppies.html
@@ -62,8 +62,8 @@
                 <img src="images/puppies/sept/sept-01.jpg" alt="black female frenchie puppy">
                 <img src="images/puppies/sept/sept-02.jpg" alt="black female frenchie puppy">
                 <img src="images/puppies/sept/sept-03.jpg" alt="black female frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX</h3> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3>
             </div>
 
             <div class="card puppy">
