--- a/puppies.html
+++ b/puppies.html
@@ -56,6 +56,13 @@
                 <h3>SOLD, Dallas, TX</h3> -->
             </div>
 
+            <div class="card puppy">
+                <h1>blue and tan, boy </h1>
+                <img src="images/puppies/nov/bluetanmale.jpg" alt="blue and tan female frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3> -->
+            </div>
+
 
             <div class="card puppy">
                 <h1>black chocolates girl</h1>
