--- a/puppies.html
+++ b/puppies.html
@@ -65,21 +65,11 @@
 
 
             <div class="card puppy">
-                <h1>black chocolates girl</h1>
+                <h1>black chocolate, girl</h1>
                 <img src="images/puppies/sept/sept-31.jpg" alt="black micro french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
-
-        
-
-            <div class="card puppy">
-                <h1>blue and tan girl </h1>
-                <img src="images/puppies/nov/bluetanfemale.jpeg" alt="blue bulldog puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Burleson, TX</h3> -->
-            </div>
-
 
            <div class="card puppy">
                 <h1>red fawn, micro, girl </h1>
