--- a/puppies.html
+++ b/puppies.html
@@ -66,7 +66,7 @@
 
             <div class="card puppy">
                 <h1>black chocolate, girl</h1>
-                <img src="images/puppies/sept/sept-31.jpg" alt="black micro french bulldog puppy">
+                <img src="images/puppies/nov/IMG_6264.jpg.jpeg" alt="black micro french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
