--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  November 21st, 2023 -- We have one boy and several girls available.</p>
+            <p class="lead">  December 15th, 2023 -- We have boys and girls available and ready for Christmas. All of our puppies come with a health guarantee and are up to date on vaccinations.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -51,26 +51,71 @@
 
            <div class="card puppy">
                 <h1>blue and tan, boy </h1>
-                <img src="images/puppies/nov/bluetanmale.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/nov/bluentan1.jpeg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/nov/bluentan2.jpeg" alt="blue and tan female frenchie puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas, TX</h3> -->
             </div>
 
-
             <div class="card puppy">
                 <h1>black chocolate, girl</h1>
-                <img src="images/puppies/nov/IMG_6264.jpg.jpeg" alt="black micro french bulldog puppy">
+                <img src="images/puppies/nov/blackg1.jpeg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/nov/blackg2.jpeg" alt="blue and tan female frenchie puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
 
            <div class="card puppy">
-                <h1>black with brindle paws, boy</h1>
-                <img src="images/puppies/nov/blackboy1.jpeg" alt="red frenchie puppy">
-                <img src="images/puppies/nov/blackboy2.jpeg" alt="red frenchie puppy">
+                <h1>Romeo's black and tan, boy</h1>
+                <img src="images/puppies/nov/blackntan.jpeg" alt="red frenchie puppy">
             </div>
             
             
+            <div class="card puppy">
+                <h1>black and tan #1, boy</h1>
+                <img src="images/puppies/nov/bnt1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/bnt2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>blue fawn, boy</h1>
+                <img src="images/puppies/nov/bfb1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/bfb2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>black and tan #2, boy</h1>
+                <img src="images/puppies/nov/bnt2nd1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/bnt2nd2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>blue fawn, girl</h1>
+                <img src="images/puppies/nov/fg1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/fg2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>fawn with black mask, girl</h1>
+                <img src="images/puppies/nov/fgbm1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/fgbm2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>blue and tan #2, girl</h1>
+                <img src="images/puppies/nov/bntf1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/bntf2.jpeg" alt="red frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>fawn with black mask, girl</h1>
+                <img src="images/puppies/nov/fg1.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/fg2.jpeg" alt="red frenchie puppy">
+            </div>
+
+
+
+
         </div>
     </section>
 
