--- a/puppies.html
+++ b/puppies.html
@@ -49,13 +49,11 @@
         </div>
         <div class="container grid">
 
-           <div class="card puppy">
+           <!-- <div class="card puppy">
                 <h1>blue and tan, boy </h1>
                 <img src="images/puppies/nov/bluentan1.jpeg" alt="blue and tan female frenchie puppy">
                 <img src="images/puppies/nov/bluentan2.jpeg" alt="blue and tan female frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX</h3> -->
-            </div>
+            </div> -->
 
             <div class="card puppy">
                 <h1>black chocolate, girl</h1>
