--- a/stud.html
+++ b/stud.html
@@ -43,8 +43,7 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p>We're thrilled to celebrate Romeo's first trophy from his first show: Texas Bully Association
-                        Best Chocolate Frenchie!</p>
+                    <p>We currently do not offer any of studs. Please check back in the future or text us for more information.</p>
                     <!-- <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
                         registered Studs. Romeo, out of Mr GORE, carries double testable choloate with one cocoa and can
                         produce both rojo and new shade rojo pups. Our boy Ferrero just turned 7 months, and is a l4
@@ -54,12 +53,12 @@
                 <!-- <div class="card">
                     <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
                 </div> -->
-                <iframe class="video" src="https://www.youtube.com/embed/8L1kFcLZsdw" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
+                <!-- <iframe class="video" src="https://www.youtube.com/embed/8L1kFcLZsdw" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe> -->
             </div>
         </section>
 
-        <section class="docs-main bg-my-4">
+        <!-- <section class="docs-main bg-my-4">
 
             <div class="container grid">
 
@@ -94,7 +93,7 @@
                     <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog">
 
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="container grid">
 
                 <div class="card bg-light p-3">
@@ -127,7 +126,7 @@
 
                 </div>
             </div> -->
-            <div class="container grid">
+            <!-- <div class="container grid">
 
                 <div class="card bg-light p-3">
 
@@ -149,15 +148,15 @@
                         </ul>
                     </nav>
 
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <h2>Jer Beau Bear</h2>
                     <img src="images/Stud/jerbear-4.jpg" alt="lilac and tan french bulldog">
                     <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
                     <img src="images/Stud/Jerbear-2.jpg" alt="lilac and tan french bulldog">
 
-                </div>
+                </div> -->
             </div>
         </section>
 
