--- a/puppies.html
+++ b/puppies.html
@@ -58,10 +58,10 @@
 
             <div class="card puppy">
                 <h1>fawn with black mask, girl</h1>
-                <img src="images/puppies/nov/bff1.jpeg" alt="red frenchie puppy">
-                <img src="images/puppies/nov/bff2.jpeg" alt="red frenchie puppy">
-                <img src="images/puppies/nov/bff3.jpeg" alt="red frenchie puppy">
-                <img src="images/puppies/nov/bff4.jpeg" alt="red frenchie puppy">
+                <img src="images/puppies/nov/bff1.jpeg" alt="blue fawn frenchie puppy">
+                <img src="images/puppies/nov/bff2.jpeg" alt="blue fawn frenchie puppy">
+                <img src="images/puppies/nov/bff3.jpeg" alt="blue fawn frenchie puppy">
+                <img src="images/puppies/nov/bff4.jpeg" alt="blue fawn frenchie puppy">
             </div>
 
 
