--- a/puppies.html
+++ b/puppies.html
@@ -41,7 +41,7 @@
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
             <p class="lead"> Tuesday Jan 9th, 2024 -- We have boys and girls available. All of our puppies come with a
-                health guarantee and are up to date on vaccinations. We are spotlighting this adorable Blue Fawn Female
+                health guarantee and are up to date on vaccinations. We are spotlighting this adorable Fawn with Black Mask Female
                 right now. Be sure to text us for photos of our other current puppies.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
