--- a/puppies.html
+++ b/puppies.html
@@ -40,8 +40,8 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Tuesday Jan 9th, 2024 -- We have boys and girls available. All of our puppies come with a
-                health guarantee and are up to date on vaccinations. We are spotlighting this adorable Fawn with Black Mask Female
+            <p class="lead"> Jan 13th, 2024 -- We have boys and girls available. All of our puppies come with a
+                health guarantee and are up to date on vaccinations. We are spotlighting this adorable Black and Tan Male
                 right now. Be sure to text us for photos of our other current puppies.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
@@ -57,11 +57,10 @@
             </div> -->
 
             <div class="card puppy">
-                <h1>fawn with black mask, girl</h1>
-                <img src="images/puppies/nov/bff1.jpeg" alt="blue fawn frenchie puppy">
-                <img src="images/puppies/nov/bff2.jpeg" alt="blue fawn frenchie puppy">
-                <img src="images/puppies/nov/bff3.jpeg" alt="blue fawn frenchie puppy">
-                <img src="images/puppies/nov/bff4.jpeg" alt="blue fawn frenchie puppy">
+                <h1>black and tan, boy</h1>
+                <img src="images/puppies/nov/ybntb1.jpeg" alt="black and tan frenchie puppy">
+                <img src="images/puppies/nov/ybntb2.jpeg" alt="black and tan frenchie puppy">
+                <img src="images/puppies/nov/ybntb3.jpeg" alt="black and tan frenchie puppy">
             </div>
 
 
