--- a/puppies.html
+++ b/puppies.html
@@ -40,9 +40,8 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 13th, 2024 -- We have boys and girls available. All of our puppies come with a
-                health guarantee and are up to date on vaccinations. We are spotlighting this adorable Black and Tan Male
-                right now. Be sure to text us for photos of our other current puppies.</p>
+            <p class="lead"> Feb 5th, 2024 -- We have boys and girls available. All of our puppies come with a
+                health guarantee, and they are up-to-date on vaccinations. We are spotlighting this adorable fawn male. Be sure to text us for photos of our other available puppies.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -57,10 +56,10 @@
             </div> -->
 
             <div class="card puppy">
-                <h1>black and tan, boy</h1>
-                <img src="images/puppies/nov/ybntb1.jpeg" alt="black and tan frenchie puppy">
-                <img src="images/puppies/nov/ybntb2.jpeg" alt="black and tan frenchie puppy">
-                <img src="images/puppies/nov/ybntb3.jpeg" alt="black and tan frenchie puppy">
+                <h1>fawn, boy</h1>
+                <img src="images/puppies/feb/IMG_7709.jpg.jpeg" alt="black and tan frenchie puppy">
+                <img src="images/puppies/feb/IMG_7710.jpg.jpeg" alt="black and tan frenchie puppy">
+                <img src="images/puppies/feb/IMG_7711.jpg.jpeg" alt="black and tan frenchie puppy">
             </div>
 
 
