--- a/puppies.html
+++ b/puppies.html
@@ -40,8 +40,8 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Feb 5th, 2024 -- We have boys and girls available. All of our puppies come with a
-                health guarantee, and they are up-to-date on vaccinations. We are spotlighting this adorable fawn male. Be sure to text us for photos of our other available puppies.</p>
+            <p class="lead"> Feb 19th, 2024 -- We have boys and girls available. All of our puppies come with a
+                health guarantee, and they are up-to-date on vaccinations. Be sure to text us for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -49,11 +49,12 @@
         </div>
         <div class="container grid">
 
-            <!-- <div class="card puppy">
-                <h1>blue and tan, boy </h1>
-                <img src="images/puppies/nov/bluentan1.jpeg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/nov/bluentan2.jpeg" alt="blue and tan female frenchie puppy">
-            </div> -->
+            <div class="card puppy">
+                <h1>chocolate fawn, boy </h1>
+                <img src="images/puppies/feb/chocfawnb.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb2.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb3.jpg" alt="blue and tan female frenchie puppy">
+            </div>
 
             <div class="card puppy">
                 <h1>fawn, boy</h1>
