--- a/puppies.html
+++ b/puppies.html
@@ -51,9 +51,10 @@
 
             <div class="card puppy">
                 <h1>chocolate fawn, boy </h1>
-                <img src="images/puppies/feb/chocfawnb.jpg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/feb/chocfawnb2.jpg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/feb/chocfawnb3.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb.jpg" alt="frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb2.jpg" alt="frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb3.jpg" alt="frenchie puppy">
+                <img src="images/puppies/feb/chocfawnb4.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
@@ -63,6 +64,13 @@
                 <img src="images/puppies/feb/IMG_7711.jpg.jpeg" alt="black and tan frenchie puppy">
             </div>
 
+            <div class="card puppy">
+                <h1>chocolate fawn, girl </h1>
+                <img src="images/puppies/feb/chocfawng.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawng2.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawng3.jpg" alt="blue and tan female frenchie puppy">
+              
+            </div>
 
 
 
