--- a/puppies.html
+++ b/puppies.html
@@ -57,6 +57,15 @@
                 <img src="images/puppies/feb/chocfawnb4.jpg" alt="frenchie puppy">
             </div>
 
+
+            <div class="card puppy">
+                <h1>chocolate fawn, girl </h1>
+                <img src="images/puppies/feb/chocfawng.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawng2.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/chocfawng3.jpg" alt="blue and tan female frenchie puppy">
+              </div>
+
+
             <div class="card puppy">
                 <h1>fawn, boy</h1>
                 <img src="images/puppies/feb/IMG_7709.jpg.jpeg" alt="black and tan frenchie puppy">
@@ -65,12 +74,20 @@
             </div>
 
             <div class="card puppy">
-                <h1>chocolate fawn, girl </h1>
-                <img src="images/puppies/feb/chocfawng.jpg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/feb/chocfawng2.jpg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/feb/chocfawng3.jpg" alt="blue and tan female frenchie puppy">
-              
-            </div>
+                <h1>fawn, girl </h1>
+                <img src="images/puppies/feb/fawng.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/fawng2.jpg" alt="blue and tan female frenchie puppy">
+              </div>
+            
+              <div class="card puppy">
+                <h1>'rojo' red chocolate fawn, girl, MICRO </h1>
+                <img src="images/puppies/feb/rojofawn1.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/rojofawn2.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/rojofawn3.jpg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/feb/rojofawn4.jpg" alt="blue and tan female frenchie puppy">
+              </div>
+
+
 
 
 
