--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Feb 19th, 2024 -- We have boys and girls available. All of our puppies come with a
+            <p class="lead"> Feb 19th, 2024 -- We're so excited about of our grogeous chocolates fawns! All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text us for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
@@ -80,7 +80,7 @@
               </div>
             
               <div class="card puppy">
-                <h1>'rojo' red chocolate fawn, girl, MICRO </h1>
+                <h1>'rojo' red chocolate fawn, girl, MICRO, carries fluffy </h1>
                 <img src="images/puppies/feb/rojofawn1.jpg" alt="blue and tan female frenchie puppy">
                 <img src="images/puppies/feb/rojofawn2.jpg" alt="blue and tan female frenchie puppy">
                 <img src="images/puppies/feb/rojofawn3.jpg" alt="blue and tan female frenchie puppy">
