--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Feb 19th, 2024 -- We're so excited about of our grogeous chocolates fawns! All of our puppies come with a
+            <p class="lead"> Mar 2nd, 2024 -- We're so excited about of our grogeous chocolates fawns! All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text us for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
@@ -50,7 +50,7 @@
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>chocolate fawn, boy </h1>
+                <h1>chocolate fawn, boy -- carries coco and testable choc (coco/Bb) </h1>
                 <img src="images/puppies/feb/chocfawnb.jpg" alt="frenchie puppy">
                 <img src="images/puppies/feb/chocfawnb2.jpg" alt="frenchie puppy">
                 <img src="images/puppies/feb/chocfawnb3.jpg" alt="frenchie puppy">
@@ -58,7 +58,8 @@
 
 
             <div class="card puppy">
-                <h1>chocolate fawn, girl </h1>
+                <h1>chocolate fawn, girl -- carries coco and testable choc (coco/Bb) </h1>
+                <img src="images/puppies/feb/chocfawng1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/feb/chocfawng2.jpg" alt="blue and tan female frenchie puppy">
                 <img src="images/puppies/feb/chocfawng3.jpg" alt="blue and tan female frenchie puppy">
               </div>
