--- a/puppies.html
+++ b/puppies.html
@@ -40,8 +40,8 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Mar 10th, 2024 Pupdate: only one girl still available! All of our puppies come with a
-                health guarantee, and they are up-to-date on vaccinations. Be sure to text us for more info!</p>
+            <p class="lead"> June 7th, 2024 Pupdate: We have several boys and girls avaiable. All of our puppies come with a
+                health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -50,31 +50,12 @@
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>'rojo' red chocolate fawn, girl, MICRO, carries fluffy </h1>
-                <img src="images/puppies/feb/rojofawn2.jpg" alt="blue and tan female frenchie puppy">
-                <img src="images/puppies/feb/rojofawn3.jpg" alt="blue and tan female frenchie puppy">
-              </div>
-
-            <div class="card puppy">
-                <h1>chocolate fawn, girl -- carries coco and testable choc (coco/Bb) </h1>
-                <img src="images/puppies/feb/chocfawng1.jpg" alt="frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
-              </div>
-
-            <div class="card puppy">
-                <h1>fawn, boy</h1>
-                <img src="images/puppies/feb/IMG_7710.jpg.jpeg" alt="black and tan frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
+                <h1>lilac merle male </h1>
+                <img src="images/puppies/june/lmm4.jpeg" alt="lilac merle male frenchie puppy">
+                <img src="images/puppies/june/lmm1.jpeg" alt="lilac merle male frenchie puppy">
+                <img src="images/puppies/june/lmm2.jpeg" alt="lilac merle male frenchie puppy">
+                <img src="images/puppies/june/lmm3.jpeg" alt="lilac merle male frenchie puppy">
             </div>
-
-            <div class="card puppy">
-                <h1>fawn, girl </h1>
-                <img src="images/puppies/feb/fawng.jpg" alt="blue and tan female frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
-              </div>
 
         </div>
     </section>
