--- a/puppies.html
+++ b/puppies.html
@@ -56,6 +56,14 @@
                 <img src="images/puppies/june/lmm2.jpeg" alt="lilac merle male frenchie puppy">
                 <img src="images/puppies/june/lmm3.jpeg" alt="lilac merle male frenchie puppy">
             </div>
+            
+            <div class="card puppy">
+                <h1>lilac merle male </h1>
+                <img src="images/puppies/june/lff1.jpeg" alt="lilac fawn female frenchie puppy">
+                <img src="images/puppies/june/lff2.jpeg" alt="lilac fawn female frenchie puppy">
+                <img src="images/puppies/june/lff3.jpeg" alt="lilac fawn female frenchie puppy">
+                <img src="images/puppies/june/lff4.jpeg" alt="lilac fawn female frenchie puppy">
+            </div>
 
         </div>
     </section>
