--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> June 7th, 2024 Pupdate: We have several boys and girls avaiable. All of our puppies come with a
+            <p class="lead"> June 11th, 2024 Pupdate: We have several boys and girls avaiable. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
@@ -50,7 +50,7 @@
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>lilac merle male </h1>
+                <h1>golden merle, boy </h1>
                 <img src="images/puppies/june/lmm4.jpeg" alt="lilac merle male frenchie puppy">
                 <img src="images/puppies/june/lmm1.jpeg" alt="lilac merle male frenchie puppy">
                 <img src="images/puppies/june/lmm2.jpeg" alt="lilac merle male frenchie puppy">
@@ -58,12 +58,21 @@
             </div>
             
             <div class="card puppy">
-                <h1>lilac merle male </h1>
+                <h1>lilac merle, girl</h1>
+                <img src="images/puppies/june/lmf1.jpeg" alt="lilac merle female frenchie puppy">
+                <img src="images/puppies/june/lmf2.jpeg" alt="lilac merle female frenchie puppy">
+                <img src="images/puppies/june/lmf3.jpeg" alt="lilac merle female frenchie puppy">
+                <img src="images/puppies/june/lmf4.jpeg" alt="lilac merle female frenchie puppy">
+            </div>
+            
+            <div class="card puppy">
+                <h1>lilac fawn, girl </h1>
                 <img src="images/puppies/june/lff1.jpeg" alt="lilac fawn female frenchie puppy">
                 <img src="images/puppies/june/lff2.jpeg" alt="lilac fawn female frenchie puppy">
                 <img src="images/puppies/june/lff3.jpeg" alt="lilac fawn female frenchie puppy">
                 <img src="images/puppies/june/lff4.jpeg" alt="lilac fawn female frenchie puppy">
             </div>
+
 
         </div>
     </section>
