--- a/puppies.html
+++ b/puppies.html
@@ -68,9 +68,8 @@
             <div class="card puppy">
                 <h1>lilac fawn, girl </h1>
                 <img src="images/puppies/june/lff1.jpeg" alt="lilac fawn female frenchie puppy">
-                <img src="images/puppies/june/lff2.jpeg" alt="lilac fawn female frenchie puppy">
-                <img src="images/puppies/june/lff3.jpeg" alt="lilac fawn female frenchie puppy">
-                <img src="images/puppies/june/lff4.jpeg" alt="lilac fawn female frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Arkansas</h3>
             </div>
 
 
