--- a/puppies.html
+++ b/puppies.html
@@ -34,13 +34,13 @@
                 </nav>
             </div>
         </div>
-        <h2 class="contact">text: 214.861.7611</h3>
+        <h2 class="contact">text: 214.861.7611</h2>
     </header>
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> June 13th, 2024 Pupdate: We have several boys and girls avaiable. All of our puppies come with a
+            <p class="lead"> June 14th, 2024 Pupdate: We have several boys and girls avaiable, including these two gorgeous merles. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
@@ -63,6 +63,15 @@
                 <img src="images/puppies/june/lmf2.jpeg" alt="lilac merle female frenchie puppy">
                 <img src="images/puppies/june/lmf3.jpeg" alt="lilac merle female frenchie puppy">
                 <img src="images/puppies/june/lmf4.jpeg" alt="lilac merle female frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>blue and tan, girl</h1>
+                <img src="images/puppies/june/btf1.jpeg" alt="blue and tan female frenchie puppy">
+                <img src="images/puppies/june/btf2.jpeg" alt="blue and tan">
+                <img src="images/puppies/june/btf3.jpeg" alt="blue and tan">
+                <img src="images/puppies/june/btf4.jpeg" alt="blue and tan">
+                <img src="images/puppies/june/btf5.jpeg" alt="blue and tan">
             </div>
             
             <div class="card puppy">
