--- a/puppies.html
+++ b/puppies.html
@@ -73,6 +73,14 @@
                 <img src="images/puppies/june/btf4.jpeg" alt="blue and tan">
                 <img src="images/puppies/june/btf5.jpeg" alt="blue and tan">
             </div>
+
+            <div class="card puppy">
+                <h1>Blue Sable Merle, boy</h1>
+                <img src="images/puppies/june/bsm1.jpeg" alt="Blue Sable Merle male frenchie puppy">
+                <img src="images/puppies/june/bsm2.jpeg" alt="Blue Sable Merle male frenchie puppy">
+                <img src="images/puppies/june/bsm3.jpeg" alt="Blue Sable Merle male frenchie puppy">
+                <img src="images/puppies/june/bsm4.jpeg" alt="Blue Sable Merle male frenchie puppy">
+            </div>
             
             <div class="card puppy">
                 <h1>lilac fawn, girl </h1>
