--- a/puppies.html
+++ b/puppies.html
@@ -75,11 +75,11 @@
             </div>
 
             <div class="card puppy">
-                <h1>Blue Sable Merle, boy</h1>
-                <img src="images/puppies/june/bsm1.jpeg" alt="Blue Sable Merle male frenchie puppy">
-                <img src="images/puppies/june/bsm2.jpeg" alt="Blue Sable Merle male frenchie puppy">
-                <img src="images/puppies/june/bsm3.jpeg" alt="Blue Sable Merle male frenchie puppy">
-                <img src="images/puppies/june/bsm4.jpeg" alt="Blue Sable Merle male frenchie puppy">
+                <h1>blue sable, boy</h1>
+                <img src="images/puppies/june/bsm1.jpeg" alt="Blue Sable frenchie puppy">
+                <img src="images/puppies/june/bsm2.jpeg" alt="Blue Sable frenchie puppy">
+                <img src="images/puppies/june/bsm3.jpeg" alt="Blue Sable frenchie puppy">
+                <img src="images/puppies/june/bsm4.jpeg" alt="Blue Sable frenchie puppy">
             </div>
             
             <div class="card puppy">
@@ -87,6 +87,14 @@
                 <img src="images/puppies/june/lff1.jpeg" alt="lilac fawn female frenchie puppy">
                 <div class="sold">SOLD</div>
                 <h3>SOLD, Arkansas</h3>
+            </div>
+
+
+            <div class="card puppy">
+                <h1>lilac and tan, boy </h1>
+                <img src="images/puppies/june/ltm1.jpeg" alt="lilac fawn female frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Austing</h3>
             </div>
 
 
