--- a/puppies.html
+++ b/puppies.html
@@ -94,7 +94,7 @@
                 <h1>lilac and tan, boy </h1>
                 <img src="images/puppies/june/ltm1.jpeg" alt="lilac fawn female frenchie puppy">
                 <div class="sold">SOLD</div>
-                <h3>SOLD, Austing</h3>
+                <h3>SOLD, Austin</h3>
             </div>
 
 
