--- a/puppies.html
+++ b/puppies.html
@@ -55,9 +55,8 @@
             <div class="card puppy">
                 <h1>lilac merle, girl</h1>
                 <img src="images/puppies/june/lmf1.jpeg" alt="lilac merle female frenchie puppy">
-                <img src="images/puppies/june/lmf2.jpeg" alt="lilac merle female frenchie puppy">
-                <img src="images/puppies/june/lmf3.jpeg" alt="lilac merle female frenchie puppy">
-                <img src="images/puppies/june/lmf4.jpeg" alt="lilac merle female frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, San Antonio</h3>
             </div>
 
             <div class="card puppy">
