--- a/puppies.html
+++ b/puppies.html
@@ -38,7 +38,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> June 17th, 2024 Pupdate: We have several boys and girls avaiable, including these two gorgeous merles. All of our puppies come with a
+            <p class="lead"> June 21st, 2024 Pupdate: We have two boys avaiable, including one gorgeous merle. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
         </div>
         </div>
