--- a/puppies.html
+++ b/puppies.html
@@ -71,7 +71,8 @@
                 <img src="images/puppies/june/cf2.jpg" alt="chocolate female frenchie puppy">
                 <img src="images/puppies/june/cm1.jpeg" alt="chocolate female frenchie puppy">
                 <img src="images/puppies/june/cm2.jpeg" alt="chocolate female frenchie puppy">
-                <!-- <div class="sold">SOLD</div> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Austin, TX</h3>
                 
             </div>
 
