--- a/puppies.html
+++ b/puppies.html
@@ -38,7 +38,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> July 23rd, 2024 Pupdate: NEW LITTER! We have a boys and girls available, including one gorgeous isabella rojo and tan female, two micros, and a chocolate and tan boy. All of our puppies come with a
+            <p class="lead"> August 1st, 2024 Pupdate: NEW LITTER! We have a boys and girls available, including one gorgeous isabella rojo and tan female, and a chocolate and tan boy. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
         </div>
         </div>
@@ -56,17 +56,17 @@
             
             
             <div class="card puppy">
-                <h1>micro black, girl</h1>
+                <h1>black, girl</h1>
                 <img src="images/puppies/june/bmf1.jpg" alt="micro black female frenchie puppy">
                 <img src="images/puppies/june/bmf2.jpg" alt="micro black female frenchie puppy">
                 <img src="images/puppies/june/bmf3.jpeg" alt="micro black female frenchie puppy">
                 <img src="images/puppies/june/bmf4.jpeg" alt="micro black female frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, San Antonio</h3> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Flower Mound, TX </h3>
             </div>
 
             <div class="card puppy">
-                <h1> micro chocolate, boy </h1>
+                <h1> chocolate, boy </h1>
                 <img src="images/puppies/june/cf1.jpg" alt="chocolate female frenchie puppy">
                 <img src="images/puppies/june/cf2.jpg" alt="chocolate female frenchie puppy">
                 <img src="images/puppies/june/cm1.jpeg" alt="chocolate female frenchie puppy">
