--- a/about.html
+++ b/about.html
@@ -15,7 +15,15 @@
     <meta name="description" content="A little about us as French Bulldog Breeders">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FJQXDFT21M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FJQXDFT21M');
+</script>
 <body>
     <!-- NAVBAR -->
     <header>
