--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <meta name="description" content="Happy & healthy French Bulldogs raised in our home, delivered to yours">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FJQXDFT21M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FJQXDFT21M');
+</script>
 
 <body>
     <!-- NAVBAR -->
