--- a/puppies.html
+++ b/puppies.html
@@ -12,7 +12,15 @@
     <meta name="keywords" content="Exotic French Bulldog Puppies Available Now">
     <meta name="description" content="Check out our available French Bulldog Puppies. We deliver all over the U.S.">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FJQXDFT21M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FJQXDFT21M');
+</script>
 
 <body>
     <!-- NAVBAR -->
