--- a/puppies.html
+++ b/puppies.html
@@ -46,7 +46,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> August 1st, 2024 Pupdate: NEW LITTER! We have a boys and girls available, including one gorgeous isabella rojo and tan female, and a chocolate and tan boy. All of our puppies come with a
+            <p class="lead"> August 6th, 2024 Pupdate: NEW LITTER! We have a boys and girls available, including one gorgeous isabella rojo and tan female, and a chocolate and tan boy. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
         </div>
         </div>
