--- a/puppies.html
+++ b/puppies.html
@@ -46,7 +46,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> August 26th, 2024 Pupdate: We have a boy and a girl available: one gorgeous isabella rojo and tan female, and a sweet chocolate and tan boy. All of our puppies come with a
+            <p class="lead"> September 10th, 2024 Pupdate: WE just had a new litter: 3 chocolate boys and 3 lilac girls! We still have a boy and a girl available: one gorgeous isabella rojo and tan female, and a sweet chocolate and tan boy. All of our puppies come with a
                 health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
         </div>
         </div>
@@ -69,6 +69,14 @@
                 <img src="images/puppies/june/cnt2.jpeg" alt="chocolate and tan male frenchie puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Austin</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>new litter, chocolates and lilacs</h1>
+                <img src="images/puppies/june/ferrlitter.jpeg" alt="isabella rojo and tan frenchie puppy">
+                <img src="images/puppies/june/ferrlitter2.jpeg" alt="isabella rojo and tan frenchie puppy">
+                <img src="images/puppies/june/ferr3.jpeg" alt="isabella rojo and tan frenchie puppy">
+
             </div>
             
             
