remove contact phone

--- a/puppies.html
+++ b/puppies.html
@@ -40,14 +40,13 @@
                 </nav>
             </div>
         </div>
-        <h2 class="contact">text: 214.861.7611</h2>
+        <!-- <h2 class="contact">text: 214.861.7611</h2> -->
     </header>
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> September 19th, 2024 Pupdate: NEW litter: 3 chocolate boys and 3 lilac girls!  All of our puppies come with a
-                health guarantee, and they are up-to-date on vaccinations. Be sure to text 214.861.7611 for more info!</p>
+            <p class="lead"> </p>
         </div>
         </div>
         <div class="container grid">
@@ -61,7 +60,7 @@
                 <img src="images/puppies/june/irf5.jpg" alt="isabella rojo and tan frenchie puppy">
             </div> -->
 
-            <div class="card puppy">
+            <!-- <div class="card puppy">
                 <h1>chocolate and tan, boy </h1>
                 <img src="images/puppies/june/cntm2.jpg" alt="chocolate and tan male frenchie puppy">
                 <div class="sold">SOLD</div>
@@ -101,7 +100,7 @@
                 <h3>SOLD</h3>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Sub head -->
     <section class="showcase-puppy">
