--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         </div>
 
     </div>
-    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
+    <!-- <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3> -->
     </header>
         <!-- Head -->
         <section class="docs-head bg-primary py-3">
