--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
     </div>
-    <!-- <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br></h2> -->
+    <h2 class="contact">email: LaBearFrenchies @ gmail.com | text: 214.861.7611</br></h2>
 </header>
     <!-- SHOWTIME -->
     <section class="showtime">
