--- a/puppies.html
+++ b/puppies.html
@@ -40,25 +40,34 @@
                 </nav>
             </div>
         </div>
-        <!-- <h2 class="contact">text: 214.861.7611</h2> -->
+        <h2 class="contact">text: 214.861.7611</h2>
     </header>
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW:</h1>
+            <h1 class="xl">Puppies Available NOW: January 27th, 2025 - We have two chocolate boys currently available. We also have two lilacs avaible, a boy and a girl. And we have one newborn platinum male born last week. Our fluffy is having her litter tonight as well. Please text for pictures and videos! 214.861.7611</h1>
             <p class="lead"> </p>
         </div>
         </div>
         <div class="container grid">
             
-            <!-- <div class="card puppy">
-                <h1>isabella rojo and tan, girl </h1>
-                <img src="images/puppies/june/irf.jpeg" alt="isabella rojo and tan frenchie puppy">
-                <img src="images/puppies/june/irf2.jpeg" alt="isabella rojo and tan frenchie puppy">
-                <img src="images/puppies/june/irf3.jpeg" alt="isabella rojo and tan frenchie puppy">
-                <img src="images/puppies/june/irf4.jpg" alt="isabella rojo and tan frenchie puppy">
-                <img src="images/puppies/june/irf5.jpg" alt="isabella rojo and tan frenchie puppy">
-            </div> -->
+            <div class="card puppy">
+                <h1>chocolate, boys</h1>
+                <img src="images/puppies/2025/chocolates.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/chocolate2.jpeg" alt="chocolate frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>lilacs, boy and girl</h1>
+                <img src="images/puppies/2025/lilacs.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/lilacs2.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/lilacs3.jpeg" alt="chocolate frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>platinum, boy</h1>
+                <img src="images/puppies/2025/newborn.jpeg" alt="chocolate frenchie puppy">
+            </div>
 
             <!-- <div class="card puppy">
                 <h1>chocolate and tan, boy </h1>
